# tokenomics

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
agora/: __init__.py  backends.py  config.py  environment.py  judge.py  market.py  observation.py  referee.py  rewards.py  run.py  tools.py  transcripts.py  types.py
agora/policies/: __init__.py  base.py  llm.py  scripted.py
analysis/: metrics.py  viz.py
configs/: base.yaml  qwen_smoke.yaml
configs/ablations/: comm_no_trade.yaml  endgame.yaml  framing_competitive.yaml  framing_cooperative.yaml  no_comm.yaml  privilege.yaml  (+1 more)
docs/: DESIGN.md  protocol.md
paper/: .gitignore  README.md  acl_latex.tex  custom.bib
scripts/: agora_grid.slurm  agora_ladder.slurm  agora_probe.slurm  agora_qwen.slurm  agora_qwen_gradient.slurm  agora_qwen_gradient_seeds.slurm  agora_trust.slurm  deconfound_report.py  gpt54_program.py  gpt54_progress.py  gradient_report.py  import_to_viewer.py  ladder_report.py  lie_judge.py  lint_docstrings.py  make_samples.py  memory_report.py  plot_cost_error.py  plot_error_views.py  plot_ladder.py  plot_price_sweep.py  price_report.py  qwen_match.py  refresh_site_data.py  scripted_gradient.py  serve_qwen.sh  serve_web.sh  smoke_qwen.sh  study.py
tests/: test_backends.py  test_docstrings.py  test_gpt54_program.py  test_ladder.py  test_lie_judge.py  test_llm_policy.py  test_markdown_memory.py  test_market.py  test_match.py  test_metrics_round_scope.py  test_multimodel.py  test_reciprocation.py  test_referee.py  test_viz.py  test_web.py
web/: __init__.py  app.py
(+42 files in other folders)
